--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -9,6 +9,7 @@ jobs:
   monitor:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repo
       - uses: actions/checkout@v4
       - name: Setup Python
         uses: actions/setup-python@v5
